fix: Atualizando o comentário em ejs

--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -1,4 +1,4 @@
-// Descrição: Este arquivo é o ponto de entrada do usuário, demonstrando as principais funçoes referente a tasks.
+<!-- Descrição: Este arquivo é o ponto de entrada do usuário, demonstrando as principais funçoes referente a tasks.-->
 
 <!DOCTYPE html>
 <html lang="pt-BR">
