docs: Atualizando WAD e README

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -115,5 +115,9 @@
       // Chama a função ao carregar a página
       carregarTarefas();
     </script>
+    <script
+      src="https://cdn.userway.org/widget.js"
+      data-account="YswjRxBH1z"
+    ></script>
   </body>
 </html>
