--- a/views/pages/tasks.ejs
+++ b/views/pages/tasks.ejs
@@ -276,5 +276,9 @@
       // Carrega tarefas ao abrir a página
       carregarTarefas();
     </script>
+    <script
+      src="https://cdn.userway.org/widget.js"
+      data-account="YswjRxBH1z"
+    ></script>
   </body>
 </html>
