docs: Adição dos itens de demonstração (entrega final))

--- a/views/pages/tasks.ejs
+++ b/views/pages/tasks.ejs
@@ -5,6 +5,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Tarefas</title>
+    <link rel="icon" href="/assets/icon_logo.png" type="image/x-icon" />
+
     <link rel="stylesheet" href="/css/tasksStyle.css" />
 
     <!-- Importação de fontes do Google Fonts -->
