--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minhas Tasks</title>
+    <link rel="icon" href="/assets/icon_logo.png" type="image/x-icon" />
+
     <link rel="stylesheet" href="/css/homeStyle.css" />
 
     <!-- Importação de fontes do Google Fonts -->
